fixed the bug that was causing long text to overflow

--- a/front/elephant/src/app/components/note/note.component.scss
+++ b/front/elephant/src/app/components/note/note.component.scss
@@ -40,6 +40,7 @@
   height: 90%;
   justify-content: space-between;
   width: 100%;
+  word-wrap: break-word;
 }
 
 .optionsButton {
