--- a/front/elephant/src/styles.scss
+++ b/front/elephant/src/styles.scss
@@ -82,6 +82,9 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+markdown{
+  word-wrap: break-word;
+}
 
 
 
